syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";
package helloworld;

//import 해서 사용 가능하지만, js를 각각 빌드하긴 해야함
import "empty.proto";

service Greeter {
  
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetMyName (NO_PARAM) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}